# rusty-experimentation

./: Cargo.toml  Dockerfile  Dockerfile.debian  Dockerfile.distroless  README.md
crates/metadata-bin/: Cargo.toml
crates/metadata-bin/src/: cli.rs  commands.rs  main.rs  utils.rs
crates/metadata-bin/src/cli/: commands.rs  mod.rs  serve.rs
crates/metadata-data-layer/: Cargo.toml
crates/metadata-data-layer-utils/: Cargo.toml
crates/metadata-data-layer-utils/src/: extract.rs  lib.rs  repository.rs  state.rs
crates/metadata-data-layer/src/: extract.rs  lib.rs  state.rs
crates/metadata-data-layer/src/internal/: extract.rs  mod.rs  repository.rs  state.rs
crates/metadata-data-layer/src/models/: block.rs  domain.rs  mod.rs
crates/metadata-data-layer/src/repositories/: block.rs  domain.rs  mod.rs
crates/metadata-http/: Cargo.toml
crates/metadata-http-utils/: Cargo.toml
crates/metadata-http-utils/src/: error.rs  lib.rs  problem.rs  problems.rs
crates/metadata-http/src/: lib.rs  state.rs
crates/metadata-http/src/handlers/: blocks.rs  domains.rs  mod.rs
src/: main.rs
