[package]
name = "backbone-metadata"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "^0.7.4"
tokio = { version = "^1.36.0", features = ["macros", "net", "parking_lot", "rt-multi-thread", "signal"] }
tracing = "^0.1.40"
tracing-subscriber = { version = "^0.3.18", features = ["env-filter", "json", "parking_lot", "smallvec"] }
