[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
async-trait = "*"
axum = "^0.7.4"
axum-core = "*"
chrono = "^0.4.35"
http = "^1.1.0"
serde = { version = "^1.0.0", features = ["derive"] }
sqlx = { version = "^0.7.4" }
tokio = { version = "^1.36.0", features = ["macros", "net", "parking_lot", "rt-multi-thread", "signal"] }
tracing = "^0.1.40"
uuid = "^1.7.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
