[package]
name = "metadata-bin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "backbone-metadata"
path = "src/main.rs"

[dependencies]
axum.workspace = true
metadata-data-layer = { path = "../metadata-data-layer" }
metadata-data-layer-utils = { path = "../metadata-data-layer-utils" }
metadata-http = { path = "../metadata-http" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "^0.3.18", features = ["env-filter", "json", "parking_lot", "smallvec"] }
dotenvy = "^0.15.7"
