[package]
name = "metadata-bin"
version.workspace = true
edition.workspace = true

[[bin]]
name = "backbone-metadata"
path = "src/main.rs"

[dependencies]
axum.workspace = true
http.workspace = true
metadata-data-layer = { path = "../metadata-data-layer" }
metadata-data-layer-utils = { path = "../metadata-data-layer-utils" }
metadata-http = { path = "../metadata-http" }
tokio.workspace = true
tower = "*"
tracing.workspace = true
tracing-subscriber = { version = "^0.3.18", features = ["env-filter", "json", "parking_lot", "smallvec"] }
dotenvy = "^0.15.7"

[dependencies.clap]
version = "^4.5.4"
default-features = false
features = [
    "cargo",
    "env",
    "help",
    "std",
    "suggestions",
    "usage",
]

[dependencies.tower-http]
version = "*"
features = [
    "compression-br",
    "compression-gzip",
    "cors",
    "decompression-br",
    "decompression-gzip",
    "trace",
]

[target.'cfg(any(target = "aarch64-unknown-linux-musl", target = "x86_64-unknown-linux-musl"))'.dependencies]
tikv-jemallocator = "^0.5"
