[package]
name = "metadata-data-layer"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
axum-core.workspace = true
chrono = { workspace = true, features = ["serde"]}
http.workspace = true
serde.workspace = true
sqlx = { version="^0.7.3", features = ["chrono", "ipnetwork", "json", "postgres", "runtime-tokio", "tls-rustls", "uuid"] }
uuid = { workspace = true, features = ["serde", "fast-rng", "v7"] }

[lib]
name = "metadata_data_layer"
